@@ -2,6 +2,9 @@
 //
 // $Id$
 
+#include "tao/TypeCode_Traits.h"
+
+
 template <typename STRING_TYPE>
 ACE_INLINE
 TAO::TypeCode::Base_Attributes<STRING_TYPE>::Base_Attributes (
@@ -16,33 +19,12 @@ template <typename STRING_TYPE>
 ACE_INLINE char const *
 TAO::TypeCode::Base_Attributes<STRING_TYPE>::id (void) const
 {
-  return this->id_;
+  return Traits<STRING_TYPE>::get_string (this->id_);
 }
 
 template <typename STRING_TYPE>
 ACE_INLINE char const *
 TAO::TypeCode::Base_Attributes<STRING_TYPE>::name (void) const
 {
-  return this->name_;
-}
-
-// -----------------------------------------------------------------
-// Some compilers exhibit warnings about better conversion sequence
-// from a CORBA::String_var to a char const *.  These member
-// specializations work around them by performing explicit
-// conversions.
-// -----------------------------------------------------------------
-
-template<>
-ACE_INLINE char const *
-TAO::TypeCode::Base_Attributes<CORBA::String_var>::id (void) const
-{
-  return this->id_.in ();
-}
-
-template<>
-ACE_INLINE char const *
-TAO::TypeCode::Base_Attributes<CORBA::String_var>::name (void) const
-{
-  return this->name_.in ();
+  return Traits<STRING_TYPE>::get_string (this->name_);
 }
